tools/tests/errors/reduce_empty.ki
discard import("functools").reduce(Function(a, b): return a + b, [])
